# dotfiles

./: .editorconfig  .gitignore  Brewfile  Brewfile.lock.json  CLAUDE.md  LICENSE  README.md  foo.sh  install.conf.yaml
.github/workflows/: main.yml
config/: starship.toml
config/fish/: config.fish
config/fontconfig/: fonts.conf
config/gtk-3.0/: gtk.css
config/kitty/: kitty.conf
home/: .chezmoi.toml.tmpl  antigenrc  dot_gitconfig.tmpl  editorconfig  gitconfig  tmux.conf.local  tool-versions  zlogin  zshenv  zshrc
home/.chezmoidata/: darwin-packages.yaml  debian-packages.yaml
home/.chezmoiscripts/: run_after_05-finish.sh.tmpl  run_after_99-finish.sh.tmpl  run_before_00-intro.sh.tmpl  run_once_after_00-passwordless-sudo.sh.tmpl  run_once_after_00-passwordless_sudo.sh.tmpl  run_once_after_01-tmux-conf.sh.tmpl  (+16 more)
scripts/: bootstrap  setup.sh  setup_docker_debian.sh  start  update
scripts/common/ansible/: .tool-versions  config.yml  pyproject.toml
scripts/common/ansible/molecule/common/: converge.yml  molecule.yml
scripts/common/ansible/molecule/common/templates/: apt.yml.j2  pacman.yml.j2
scripts/common/ansible/molecule/common/tests/: test_common.py
scripts/common/ansible/molecule/default/: converge.yml  molecule.yml  verify.yml
scripts/common/ansible/roles/asdf/defaults/: main.yml
scripts/common/ansible/roles/asdf/tasks/: install.yml  plugin.yml
scripts/common/ansible/roles/asdf/vars/: main.yaml
scripts/common/ansible/roles/common/tasks/: arch-packages.yml  main.yml  ubuntu-packages.yml
scripts/common/ansible/roles/common/vars/: main.yml
(+36 files in other folders)
