[tool.poetry]
name = "ansible"
version = "0.1.0"
description = ""
authors = ["Martin Mena <martinmena@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible-core = "^2.15.3"
molecule = "^6.0.1"
molecule-docker = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-testinfra = "^8.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
